k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: snake-game
