k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: game.nimesh.lab # Replace with your domain or local host entry
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snake-game
                port:
                  number: 80
